--- a/speex/win32/VS2005/libspeex/libspeex.vcproj
+++ b/speex/win32/VS2005/libspeex/libspeex.vcproj
@@ -1368,7 +1368,7 @@
 			/>
 			<DeploymentTool
 				ForceDirty="-1"
-				RemoteDirectory=""
+				RemoteDirectory="%CSIDL_PROGRAM_FILES%\speexce"
 				RegisterOutput="0"
 				AdditionalFiles=""
 			/>
