diff. path for lib generation added

--- a/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
+++ b/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
@@ -60,6 +60,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				OutputFile="lib/$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -120,6 +121,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				OutputFile="$ltplib\$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
