relative path to files added

--- a/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
+++ b/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
@@ -40,6 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\..\common\include;..\..\gsm"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -149,7 +150,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\ltpmobile.c"
+				RelativePath="..\..\common\src\ltpmobile.c"
 				>
 			</File>
 			<File
@@ -179,11 +180,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\GSM.H"
+				RelativePath="..\..\gsm\GSM.H"
 				>
 			</File>
 			<File
-				RelativePath=".\ltpmobile.h"
+				RelativePath="..\..\..\lib\common\include\ltpmobile.h"
 				>
 			</File>
 			<File
