--- a/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
+++ b/libltp/ltpmobile_lib/ltpmobile_lib.vcproj
@@ -104,9 +104,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
+				AdditionalIncludeDirectories="..\..\common\include;..\..\gsm"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE"
 				RuntimeLibrary="2"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
@@ -122,7 +123,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$ltplib\$(ProjectName).lib"
+				OutputFile="lib\$(ProjectName).lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
